content/blog/2025-01-01-thin_delegate_aux/tests/ui/enum_dispatch/fail_panic_if_struct.stderr
error: custom attribute panicked
  --> tests/ui/enum_dispatch/fail_panic_if_struct.rs:11:1
   |
11 | #[enum_dispatch::enum_dispatch(ShapeI)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: called `Result::unwrap()` on an `Err` value: ()
